# Test4Myself

./: .gitignore  README.md
testC/: CMakeLists.txt
testC/t2/: README.md  a.c  a.h  b.c  b.h  c.c  c.h  d.c  d.h  e.c  e.h  main.c
testC/t4/: Main.c  README.md
testC/t5/: testBL.c  testopen.c
testC/t6/: CMakeLists.txt
testC/t7/: a.c
testCMake/t10/: CMakeLists.txt  README.md  a.cpp  a.h  main.cpp
testCMake/t10/cmake/: FindOPENSSL.cmake
testCMake/t11/: CMakeLists.txt  CMakeLists.txt.bak  README.md  a.c  main.c
testCMake/t11/cmake/: X.cmake
testCMake/t12/: CMakeLists.txt  a.cpp
testCMake/t18/: CMakeLists.txt  test.c  try_compile.c
testCMake/t19/: CMakeLists.txt  test.c  testA.cpp
testCMake/t19/include/: test.h
testCMake/t3/: CMakeLists.txt  README.md  test.cpp  test.h.in
testCMake/t4/: CMakeLists.txt  FindHELLO.cmake  README.md  main.cpp
testCMake/t4/submodule/: a.cpp  a.h
testCMake/t5/: CMakeLists.txt  README.md  a.cpp  a.h  b.h  main.cpp  tmp.txt
testCMake/t6/: CMakeLists.txt  README.md
testCMake/t6/src/: CMakeLists.txt  main.cpp
testCMake/t6/src/proto/: app_head.proto
testCMake/t7/: CMakeLists.txt
testCMake/t8/: CMakeLists.txt  main.cpp
testCMake/t9/: CMakeLists.txt  README.md  main.cpp  main1.cpp
testCPP/testStruct/: .gitignore  CMakeLists.txt  EventCenter.cpp  EventCenter.h  ProcessCenter.cpp  ProcessCenter.h  ReadMe.md  TEST_CONSTANT.h  main.cpp  sharedlibrary.cpp
testCPP/testStruct/Buffer/: EVByteQueue.cpp  EVByteQueue.h  MyMicBuffer.cpp  MyMicBuffer.h  MyRefBuffer.cpp  MyRefBuffer.h
testCPP/testStruct/Processer/: BaseProcesser.cpp  BaseProcesser.h  HelloProcesser.cpp  HelloProcesser.h  ProcesserPori.h  ProcessorConfig.cpp  ProcessorConfig.h
testCPP/testStruct/Processer/impl/: EngineProcesser.cpp  EngineProcesser.h  FinalProcesser.cpp  FinalProcesser.h
testCPP/testStruct/Processer/impl/aec/: AECConfig.cpp  AECConfig.h  AECProcesser.cpp  AECProcesser.h  BaseAECAdapter.cpp  BaseAECAdapter.h  EVDspProcess.cpp  EVDspProcess.h  ReadMe.md
testCPP/testStruct/Processer/impl/aec/elevoc_webrtc/: EVAECProcess.cpp  EVAECProcess.h  WebrtcAec.cpp  WebrtcAec.h
testCPP/testStruct/Processer/impl/aec/webrtc/: WebrtcAec.cpp  WebrtcAec.h
testCPP/testStruct/Processer/impl/dnn/: DnnProcesser.cpp  DnnProcesser.h
testCPP/testStruct/Processer/impl/resample/: BaseResample.h  BaseResampleAdapter.cpp  BaseResampleAdapter.h  ResampleInProcesser.cpp  ResampleInProcesser.h  ResampleOutProcesser.cpp  ResampleOutProcesser.h  SpeexResamplerAdapter.cpp  SpeexResamplerAdapter.h
testCPP/testStruct/Processer/impl/resample/speex/: arch.h
testCPP/testStruct/Processer/impl/slice/: FrameSliceProcessor.cpp  FrameSliceProcessor.h  FrameSyntheticProcessor.cpp  FrameSyntheticProcessor.h
testCPP/testStruct/config/: EVAssert.cpp  EVAssert.h  ElevocLog.h
testCPP/testStruct/dao/: DataMsg.cpp  DataMsg.h  MsgCreator.cpp  MsgCreator.h
testCPP/testStruct/include/aec/api/audio/: audio_frame.h  echo_canceller3_config.h  echo_control.h
testCPP/testStruct/include/aec/modules/audio_processing/: audio_processing_impl.h
testCPP/testStruct/include/aec/modules/audio_processing/aec3/: block_processor.h  echo_canceller3.h  echo_remover.h  suppression_filter.h
testCPP/testStruct/include/aec/modules/audio_processing/include/: audio_processing.h
testCPP/testStruct/include/aec/system_wrappers/include/: metrics.h
testCPP/testStruct/include/dnn/: ElevocDnnNS.h  ElevocFeature.h  ElevocLog.h  ElevocNSDefine.h  ElevocSynthetic.h  ElevocTypeDef.h  ElevocVAD.h  Elevoc_NS.h  Elevoc_NS_Constant.h
testCPP/testStruct/include/ele_aec/gsl-master/err/: stream.c  strerror.c
testCPP/testStruct/include/ele_aec/gsl-master/gsl/: gsl_errno.h  gsl_message.h  gsl_sf_erf.h
testCPP/testStruct/include/ele_aec/gsl-master/specfunc/: expint.c
testCPP/testStruct/include/ele_aec/webrtc/base/: atomicops.h  checks.h
testCPP/testStruct/include/ele_aec/webrtc/common_audio/signal_processing/include/: spl_inl_armv7.h  spl_inl_mips.h
testCPP/testStruct/include/ele_aec/webrtc/common_audio/vad/: vad.cc
testCPP/testStruct/include/ele_aec/webrtc/modules/audio_processing/: aec0614.rar  three_band_filter_bank.h
testCPP/testStruct/include/ele_aec/webrtc/modules/audio_processing/aec/: aec_core.h  echo_cancellation.h
testCPP/testStruct/include/ele_aec/webrtc/modules/audio_processing/aec/old/: aec_core.cc  echo_cancellation.cc
testCPP/testStruct/include/ele_aec/webrtc/modules/audio_processing/aec/speexhead/: filterbank.h
testCPP/testStruct/include/ele_aec/webrtc/modules/audio_processing/aec0429/: aec.rar  新建文本文档.txt
testCPP/testStruct/include/ele_aec/webrtc/modules/audio_processing/aec0429/aec/: aec_core.cc  aec_core.cc~RF255abf89.TMP  aec_core.cc~RF258a240b.TMP  aec_core.cc~RF258ece42.TMP  aec_core.cc~RF25cf7596.TMP  aec_core.cc~RF25de3633.TMP  aec_core.cc~RF25ea5411.TMP  aec_core.cc~RF25f42f81.TMP  aec_core.cc~RF65f8c35.TMP  aec_core.cc~RF67a900a.TMP  aec_core.cc~RF687e416.TMP  aec_core.cc~RF68b4562.TMP  aec_core.cc~RF68b999d.TMP  aec_core.cc~RF6ece3.TMP  aec_core.h  echo_cancellation.h  mdf - 副本.c
testCPP/testStruct/include/ele_aec/webrtc/modules/audio_processing/aec0429/aec/speexhead/: speex_echo.h  speex_preprocess.h
testCPP/testStruct/include/ele_aec/webrtc/modules/audio_processing/aec0506/: aec.rar  new 2.txt  test_aec.m
testCPP/testStruct/include/ele_aec/webrtc/modules/audio_processing/aec0506/Webrtc_DSP/: Webrtc_DSP.sln
testCPP/testStruct/include/ele_aec/webrtc/modules/audio_processing/aec0506/aec/: aec_core.cc  aec_core.cc~RF25db9ab8.TMP  aec_core.cc~RF56950.TMP  aec_core.cc~RF6bab3b8.TMP  echo_cancellation.h  mdf.c
testCPP/testStruct/include/ele_aec/webrtc/modules/audio_processing/aec3/: aec3_fft.h
testCPP/testStruct/include/ele_aec/webrtc/modules/audio_processing/agc/legacy/: gain_control.h
testCPP/testStruct/include/engine/: EVProcessEnumType.h  IEVProcessTask_c.h
testCPP/testStruct/utils/: DumpFileUtil.cpp  DumpFileUtil.h  EVPCMHelper.cpp  EVPCMHelper.h
testMakeFile/t4/: CMakeLists.txt  Makefile  Makefile.bak  ReadMe.md  app.h  defs.h  main.c  test.c  test.h
(+236 files in other folders)
